<resources>
    <string name="app_name">aorms-seda</string>
    <string name="title_activity_reports">Sales Report</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="MonthsArray">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>



    </string-array>
    <string name="item_name">Item Name</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut semper arcu. Quisque condimentum ultrices tortor, feugiat venenatis neque interdum ut.</string>
    <string name="order_item">Order item</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="item_price">500</string>
    <string name="rupees">Rs.</string>
    <string name="ingredients">Ingredients</string>
    <string name="title_activity_gui_demo_l164348">GuiDemoL164348</string>
    <string name="tab_text_1">New Orders</string>
    <string name="tab_text_2">Show Orders</string>
    <string name="tab_text_3">Modify Threshold</string>
    <string name="tab_text_4">Show Alerts</string>
    <string name="Email">Hall Manager Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="affiliated">Order ID: 1234</string>
</resources>
