<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ItemActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ItemActivity_imageContainer"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:alpha="0.9"
            android:scaleType="centerCrop"
            android:src="@drawable/karahi" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/ItemActivity_contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/ItemActivity_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="18sp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        />

    <View
        style="@style/Divider"
        android:layout_marginTop="25dp"/>


    <TextView
        android:id="@+id/ItemActivity_textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textAlignment="center"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:textSize="22sp"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ItemActivity_IngredientsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1">

    </androidx.recyclerview.widget.RecyclerView>

    <View
        style="@style/Divider" />


    <TextView
        android:id="@+id/ItemActivity_item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_price"
        android:textAlignment="center"
        android:textColor="@color/TextColor"
        android:textSize="30sp"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textStyle="bold"
        />



    <Button
        android:id="@+id/ItemActivity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background= "@drawable/roundededgesbtn"
        android:text="@string/order_item"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textColor="@color/ButtonTextColor" />
</LinearLayout>
